--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "node-tradfri-client": "^3.0.1"
+    "node-tradfri-client": "^3.0.1",
+    "readline": "^1.3.0"
   }
 }
