--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "node-tradfri-client": "^3.0.1",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "thread-sleep": "^2.2.0"
   }
 }
