--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.17.3",
     "node-tradfri-client": "^3.0.1",
+    "nodemon": "^2.0.15",
     "readline": "^1.3.0",
     "thread-sleep": "^2.2.0"
   }
