--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node ./main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon ./app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "node-tradfri-client": "^3.0.1",
+    "node-tradfri-client": "^3.1.0",
     "nodemon": "^2.0.15",
     "readline": "^1.3.0",
     "thread-sleep": "^2.2.0"
