--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "node-tradfri-client": "^3.1.0",
-    "nodemon": "^2.0.15",
-    "readline": "^1.3.0",
-    "thread-sleep": "^2.2.0"
+    "node-tradfri-client": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
