--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node ./app.js",
+    "start": "node ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./app.js"
+    "dev": "nodemon ./dist/app.js",
+    "copy-files": "cp -r ./templates ./dist/"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,9 @@
     "node-tradfri-client": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "typescript": "^4.6.3",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.10"
   }
 }
