some more typing & incremental compilation enabled

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "node ./dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./dist/app.js",
+    "dev": "tsc --watch",
     "copy-files": "cp -r ./templates ./dist/"
   },
   "author": "",
